--- a/View/Base.lproj/Main.storyboard
+++ b/View/Base.lproj/Main.storyboard
@@ -66,6 +66,7 @@
                                 <state key="normal" title="Button"/>
                                 <connections>
                                     <action selector="buttonNextView:" destination="G3M-vs-Omt" eventType="touchUpInside" id="1My-xW-N7S"/>
+                                    <segue destination="9hG-LH-gax" kind="show" id="w7p-s1-DKK"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -118,17 +119,33 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t6d-OG-GZe" userLabel="MinuteLabel">
+                                <rect key="frame" x="317" y="33" width="21" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y0i-l1-UM5" userLabel="SecondLabel">
+                                <rect key="frame" x="341" y="33" width="21" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="o4y-xc-Zq0"/>
                     </view>
                     <connections>
-                        <outlet property="fraseRandomizada" destination="u3b-c0-rFS" id="Hcp-wK-H2m"/>
+                        <outlet property="fraseRandomizada" destination="t6d-OG-GZe" id="Lji-VM-jUM"/>
+                        <outlet property="minuteLabel" destination="t6d-OG-GZe" id="yVu-Xg-vE6"/>
+                        <outlet property="secondLabel" destination="Y0i-l1-UM5" id="Ptt-0p-bID"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fQW-uV-tk0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-70" y="1140"/>
+            <point key="canvasLocation" x="-266" y="1140"/>
         </scene>
         <!--Inicial Dinamica2 View Controller-->
         <scene sceneID="Joo-MB-4BI">
